force-app/main/default/objects/DRC_NBC_Competitor__c/DRC_NBC_Competitor__c.object-meta.xml
<CustomObject>
    <description>This object is created to store information of Competitor&apos;s</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>CR-{000}</displayFormat>
        <label>Competitor Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>