force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_Competitor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Competitor_s_Name__c</fullName>
    <label>Competitor&apos;s Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>