force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_Competitors_Product__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Competitors_Product__c</fullName>
    <description>Competitors Products</description>
    <label>Competitors Product</label>
    <type>TextArea</type>
</CustomField>