force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_Customer_Feedback_About_Competit__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Customer_Feedback_About_Competit__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>