force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>