force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_Rate__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>