force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBC_UoM_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_UoM_Unit_of_Measure__c</fullName>
    <label>UoM (Unit of Measure)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kgs</fullName>
            </value>
            <value>
                <fullName>Tonnes</fullName>
            </value>
            <value>
                <fullName>Litre</fullName>
                <isActive>false</isActive>
                <label>Litre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>