force-app/main/default/objects/DRC_NBC_Competitor__c/fields/DRC_NBCompetitor_s_Influence_on_the_Deal__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBCompetitor_s_Influence_on_the_Deal__c</fullName>
    <label>Competitor’s Influence on the Deal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>