force-app/main/default/objects/DRC_NBC_Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBCompetitor_s_Influence_on_the_Deal__c</columns>
    <columns>DRC_NBC_Competitors_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>